# telemetry-as-memory

./: Makefile  README.md  main.blg  main.out  pyproject.toml  references.bib
configs/: base.yaml  drift.yaml  novel.yaml  poison.yaml
figures/: flow.dot
paper/: main.aux  main.bbl  main.bbl-SAVE-ERROR  main.bcf  main.bcf-SAVE-ERROR  main.blg  main.fdb_latexmk  main.fls  main.out  main.tex  references.bib
results/: README.md
results/csv/: baseline_seed1.csv  baseline_seed2.csv  baseline_seed3.csv  baseline_seed4.csv  baseline_seed5.csv  closed_seed1.csv  closed_seed2.csv  closed_seed3.csv  closed_seed4.csv  closed_seed5.csv
results/drift/csv/: baseline_seed1.csv  baseline_seed2.csv  baseline_seed3.csv  baseline_seed4.csv  baseline_seed5.csv  closed_seed1.csv  closed_seed2.csv  closed_seed3.csv  closed_seed4.csv  closed_seed5.csv
results/drift/metrics/: baseline_seed2.json  closed_aggregate.json  (+3 more)
results/metrics/: baseline_aggregate.json  baseline_seed4.json  closed_aggregate.json  closed_seed1.json  closed_seed2.json  closed_seed3.json  closed_seed4.json  closed_seed5.json
scripts/: plot_results.py  run_all.sh
src/: README.md  drift_injector.py  evaluation.py  ingestion.py  main.py  online_model.py  telemetry_generator.py  trust_score.py
src/archive/: ingestion.py  online_model.py  preprocessing.py  trust_score.py
src/cli/: README.md  run_eval.py
src/tam/: README.md  __init__.py  baseline.py  features.py  io.py  memory.py  metrics.py  online.py  policy.py  telemetry.py  trust.py
src/telemetry_as_memory.egg-info/: SOURCES.txt  requires.txt
(+22 files in other folders)
